--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@reduxjs/toolkit": "^1.8.0",
     "expo": "~44.0.0",
+    "expo-constants": "^13.0.2",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-paper": "^4.11.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
